# fastcad

./: .env.template  .gitignore  CLAUDE-issue.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
deploy/: Caddyfile  README.md  bootstrap.sh  fail2ban-filter-caddy-auth.conf  fail2ban-jail.local  fastcad-cleanup.cron  fastcad.service
docs/: architecture.md
docs/plans/: 00-matrix.md  01-bootstrap.md  02-stage1-scad-spec.md  04-stage2-research.md  06-stage3-validation.md  15-open-scad.md  17-section-plane.md  20-section-caps-colors.md  22-hull-builtin.md  24-equivalence-suite.md  stage2-research-draft.md
docs/research/: README.md  m2-socket-head-cap-screw.md  m20-socket-head-cap-screw.md  m3-socket-head-cap-screw.md  m6-hex-head-bolt.md  raspberry-pi-4b-dimensions.md
docs/specs/: scad-conversation-comments.md
scripts/: dev.sh  e2e.sh  fetch-vendor.sh  test.sh
src/fastcad/: __main__.py  session.py
tests/e2e/: conftest.py  test_ask_user_disambiguation.py  test_camera_aspect.py  test_dividers.py  test_feedback_capture.py  test_open_scad.py  test_per_object_colors.py  test_progress_panel.py  test_prompt_creates_cube.py  test_section_caps.py  test_section_plane.py  test_smoke_loads.py  test_undo_redo.py  test_validation_panel.py
tests/equivalence/: helpers.py  test_equivalence.py
tests/unit/: test_agent_tools.py  test_critic.py  test_feedback_store.py  test_kernel.py  test_kernel_new.py  test_open_scad.py  test_render.py  test_research.py  test_scad.py  test_scad_eval.py  test_scad_parser.py  (+7 more)
web/: feedback.js  index.html  main.js  style.css
(+59 files in other folders)
