[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastcad"
version = "0.0.1"
description = "AI-driven incremental 3D modeling, OpenSCAD-compatible export."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "manifold3d>=2.5",
  "anthropic>=0.39",
  "pydantic>=2.6",
  "numpy>=1.26",
  "Pillow>=10.0",
  "python-multipart>=0.0.9",
  "websockets>=12",
  "lark>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-playwright>=0.4",
  "playwright>=1.42",
  "httpx>=0.27",
]

[project.scripts]
fastcad = "fastcad.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
